@@ -347,8 +347,9 @@ invoking the compiler.</p>
       This is only used if the task is forked and the
       command line args length exceeds 4k.
       <em>Since Ant 1.6</em>.</td>
-    <td align="center" valign="top">No; default is the current working
-       directory.</td>
+    <td align="center" valign="top">
+      No; default is <i>java.io.tmpdir</i>.
+    </td>
   </tr>
 </table>
 
